--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -27,5 +24,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@josefaidt/eslint-config": "^0.1.8",
+    "eslint": "^5.16.0"
   }
 }
